fix warning in plots

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -257,7 +257,7 @@
                     "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
                     "title": {
                         "text": JS_TEMPLATE_TITLE,
-                        "subtitle": JS_DEFAULT_SUB_TITLE = null,
+                        "subtitle": JS_DEFAULT_SUB_TITLE = "\"\"",
                         "anchor": JS_DEFAULT_TITLE_ANCHOR = null,
                     },
                     "width": JS_TEMPLATE_WIDTH,
