update trimming statistics in HTML report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -211,7 +211,7 @@
             </p>
 
             <!-- TEMPLATE: SUMMARY_TRIMMING_HEAD -->
-            <h4>Trimming</h4>
+            <h4>Processing</h4>
             <table class="pure-table trimming-table pure-table-striped">
                 <thead>
                     <tr>
@@ -239,7 +239,8 @@
             </table>
 
             <p class="note">
-                {{N_ENABLED}} of {{N_TOTAL}} trimming steps enabled.
+                {{N_ENABLED}} of {{N_TOTAL}} trimming steps enabled. Numbers are
+                given in terms of input reads, also for merged reads.
             </p>
 
             <!-- TEMPLATE: SUMMARY_FILTERING_HEAD -->
