specify (rough) number of reads sampled for summary statistics

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -204,7 +204,8 @@
             <!-- TEMPLATE: SAMPLING_NOTE -->
 
             <p class="note">
-                Base composition statistics/plots are based on {{PCT}}% of {{LABEL}} reads sampled during execution.
+                Base composition statistics/plots are based on {{READS}} ({{PCT}}%) of {{LABEL}} reads sampled during
+                execution.
             </p>
 
             <!-- TEMPLATE: OUTPUT_NOTE_PE -->
