minor improvements to html report
- Specify that report-only alignments are done without using the --adapter* sequences.
- Fix another instance of output sections in report-only reports.

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -220,6 +220,12 @@
                 <b>*</b> <b>Discarded</b> reads are not included in the <b>Output</b> column.
             </p>
 
+            <!-- TEMPLATE: OUTPUT_INSERT_SIZE -->
+
+            <p class="note">
+                Insert size distribution inferred using adapter-free alignments.
+            </p>
+
             <!-- TEMPLATE: SUMMARY_TRIMMING_HEAD -->
             <h4>Process summary</h4>
             <table class="pure-table trimming-table pure-table-striped">
