generalize notes in html report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -208,23 +208,13 @@
                 execution.
             </p>
 
-            <!-- TEMPLATE: OUTPUT_NOTE_PE -->
+            <!-- TEMPLATE: OUTPUT_NOTE -->
 
-            <p class="note">
-                <b>*</b> The <b>Passed</b> column includes all read types except for <b>Discarded</b> reads.
-            </p>
+            <p class="note">{{TEXT}}</p>
 
-            <!-- TEMPLATE: OUTPUT_NOTE_SE -->
+            <!-- TEMPLATE: OUTPUT_FOOTNOTE -->
 
-            <p class="note">
-                <b>*</b> <b>Discarded</b> reads are not included in the <b>Output</b> column.
-            </p>
-
-            <!-- TEMPLATE: OUTPUT_INSERT_SIZE -->
-
-            <p class="note">
-                Insert size distribution inferred using adapter-free alignments.
-            </p>
+            <p class="note"><b>{{SYMBOL}}</b> {{TEXT}}</p>
 
             <!-- TEMPLATE: SUMMARY_TRIMMING_HEAD -->
             <h4>Process summary</h4>
