--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -602,10 +602,11 @@
             <p>
                 If you use AdapterRemoval, please cite
                 <a href="https://doi.org/10.1186/s13104-016-1900-2">Schubert et. al. 2016</a>:
+            </p>
 
-            <pre>    Schubert, Lindgreen, and Orlando (2016). AdapterRemoval v2: rapid
-    adapter trimming, identification, and read merging.
-    BMC Research Notes, 12;9(1):88.</pre>
+            <p style="font-family: monospace; padding-left: 2em; padding-right: 2em; max-width: 50%;">
+                Schubert, Lindgreen, and Orlando (2016). AdapterRemoval v2: rapid adapter trimming, identification, and
+                read merging. BMC Research Notes, 12;9(1):88.
             </p>
 
             <p>
@@ -619,7 +620,7 @@
                     href="https://github.com/vega/vega-lite/blob/v5.2.0/LICENSE">license</a>).
             </p>
         </div>
-
+    </div>
 </body>
 
 </html>
