switch to jsdelivr for HTML report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -6,15 +6,15 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>{{NAME}} {{VERSION}}</title>
-    <link rel='stylesheet' href='https://unpkg.com/purecss@2.1.0/build/pure-min.css'
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css'
         integrity='sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH' crossorigin='anonymous'>
-    <script src="https://unpkg.com/vega@5.21.0/build/vega.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.21.0/build/vega.min.js"
         integrity="sha384-s2nYi9D0FfKNopEKsfINeS1Ffhcf+5uvwIrb7Zqso2II+HPhzBTWvXClt+NdUwFc"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vega-lite@5.2.0/build/vega-lite.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.2.0/build/vega-lite.min.js"
         integrity="sha384-tU6fj0fI2gxrcWwC7uBMp70QvipC9ukjcXyOs85VMmdCq33CrA7xQ3nJkJu0SmDm"
         crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vega-embed@6.20.2/build/vega-embed.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.20.2/build/vega-embed.min.js"
         integrity="sha384-oP1rwLY7weRZ5jvAVzfnJsAn+sYA69rQC4geH82Y9oMvr8ruA1oeE9Jkft2noCHR"
         crossorigin="anonymous"></script>
     <style type='text/css'>
